Shorten, update trial gen, replace google drive with fauna, ...

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
-    "googleapis": "^57.0.0",
+    "faunadb": "^4.0.0",
     "isomorphic-fetch": "^3.0.0",
     "loglevel": "^1.6.8",
     "mailgun-js": "github:highlycaffeinated/mailgun-js",
